--- a/_pages/courses.html
+++ b/_pages/courses.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Talks and presentations"
-permalink: /talks/
+title: "Relevant Courses"
+permalink: /courses/
 author_profile: true
 ---
 
