--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -7,6 +7,6 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.experiences reversed %}
+{% for post in site.experiences %}
   {% include archive-single.html %}
 {% endfor %}
